--- a/config/samples/tokens_v1alpha1_rotatingkey.yaml
+++ b/config/samples/tokens_v1alpha1_rotatingkey.yaml
@@ -3,5 +3,6 @@ kind: RotatingKey
 metadata:
   name: rotatingkey-sample
 spec:
-  # Add fields here
-  foo: bar
+  algorithm: ""
+  rotateAfter: "5m"
+  lifetime: "1m"
