--- a/config/samples/tokens_v1alpha1_jwt.yaml
+++ b/config/samples/tokens_v1alpha1_jwt.yaml
@@ -5,4 +5,6 @@ metadata:
 spec:
   algorithm: "HS256"
   subject: "yolo"
-  lifetime: "10m"
+  rotatingKeyRef:
+    name: rot1
+    namespace: default
